--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <header>
+      <div class="header-overlay"></div>
       <div class="test">
-        <a href="#"><img src="images/ProfilePhotos.jpg" alt="logo" /></a>
         <nav>
-          <ul class="navbar-list">
+            <ufl class="navbar-list">
             <li class="navbar-item">
               <div class="navbar-info">homepage</div>
               <a href="" class="navbar-link">Home</a>
@@ -35,5 +35,6 @@
         </nav>
       </div>
     </header>
+    <div></div>
   </body>
 </html>
