--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <header>
+      <div class="bac"></div>
       <div class="header-overlay"></div>
       <div class="test">
         <nav>
