--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <title>home</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
+    <section class="home">
+      <div class="introduction"><h1 class="title">Ти лох</h1>
+      </div>
+      <div class="overlay"></div>
+    </section>
     <header>
-      <div class="bac"></div>
-      <div class="header-overlay"></div>
-      <div class="test">
+      <div class="container"></div>
         <nav>
-            <ufl class="navbar-list">
+          <ul class="navbar-list">
             <li class="navbar-item">
               <div class="navbar-info">homepage</div>
               <a href="" class="navbar-link">Home</a>
@@ -36,6 +40,5 @@
         </nav>
       </div>
     </header>
-    <div></div>
   </body>
 </html>
