--- a/index.html
+++ b/index.html
@@ -8,37 +8,47 @@
 
   <body>
     <section class="home">
-      <div class="introduction"><h1 class="title">Ти лох</h1>
-      </div>
+      <!--<div class="introduction"><div class="title">Hello, my name is Dima Kulesha I am <br>front-end developer</div>  
+    </div>-->
       <div class="overlay"></div>
     </section>
-    <header>
-      <div class="container"></div>
-        <nav>
-          <ul class="navbar-list">
-            <li class="navbar-item">
-              <div class="navbar-info">homepage</div>
-              <a href="" class="navbar-link">Home</a>
-            </li>
-            <li class="navbar-item">
-              <div class="navbar-info">who are we?</div>
-              <a href="" class="navbar-link">about</a>
-            </li>
-            <li class="navbar-item">
-              <div class="navbar-info">my portfolio</div>
-              <a href="" class="navbar-link">projects</a>
-            </li>
-            <li class="navbar-item">
-              <div class="navbar-info">latest news</div>
-              <a href="" class="navbar-link">blog</a>
-            </li>
-            <li class="navbar-item">
-              <div class="navbar-info">get in touch</div>
-              <a href="" class="navbar-link">contact</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+    <div class="main">
+      <a href=""
+        ><img
+          src="/test.github.io/images/photo_2020-07-01_21-29-51.jpg"
+          alt=""
+          class="face"
+      /></a>
+      <h1>За 3 дня и R твой</h1>
+      <hr />
+      <h1>Блог о том как стать чистильщиком дымоходов</h1>
+    </div>
+
+  <!--<header>
+      <nav>
+        <ul class="navbar-list">
+          <li class="navbar-item">
+            <div class="navbar-info">homepage</div>
+            <a href="" class="navbar-link">Home</a>
+          </li>
+          <li class="navbar-item">
+            <div class="navbar-info">who are we?</div>
+            <a href="" class="navbar-link">about</a>
+          </li>
+          <li class="navbar-item">
+            <div class="navbar-info">my portfolio</div>
+            <a href="" class="navbar-link">projects</a>
+          </li>
+          <li class="navbar-item">
+            <div class="navbar-info">latest news</div>
+            <a href="" class="navbar-link">blog</a>
+          </li>
+          <li class="navbar-item">
+            <div class="navbar-info">get in touch</div>
+            <a href="" class="navbar-link">contact</a>
+          </li>
+        </ul>
+      </nav>
+    </header>-->
   </body>
 </html>
