--- a/index.html
+++ b/index.html
@@ -8,23 +8,11 @@
 
   <body>
     <section class="home">
-      <!--<div class="introduction"><div class="title">Hello, my name is Dima Kulesha I am <br>front-end developer</div>  
-    </div>-->
+      <div class="introduction"><div class="title">Hello, I am front-end developer</div>  
+    </div>
       <div class="overlay"></div>
     </section>
-    <div class="main">
-      <a href=""
-        ><img
-          src="/test.github.io/images/photo_2020-07-01_21-29-51.jpg"
-          alt=""
-          class="face"
-      /></a>
-      <h1>За 3 дня и R твой</h1>
-      <hr />
-      <h1>Блог о том как стать чистильщиком дымоходов</h1>
-    </div>
-
-  <!--<header>
+    <header>
       <nav>
         <ul class="navbar-list">
           <li class="navbar-item">
@@ -49,6 +37,6 @@
           </li>
         </ul>
       </nav>
-    </header>-->
+    </header>
   </body>
 </html>
