--- a/index.html
+++ b/index.html
@@ -8,35 +8,39 @@
 
   <body>
     <section class="home">
-      <div class="introduction"><div class="title">Hello, I am front-end developer</div>  
-    </div>
+      <div class="introduction">
+        <div class="title">Hello, I am front-end developer</div>
+      </div>
       <div class="overlay"></div>
     </section>
-    <header>
-      <nav>
-        <ul class="navbar-list">
-          <li class="navbar-item">
-            <div class="navbar-info">homepage</div>
-            <a href="" class="navbar-link">Home</a>
-          </li>
-          <li class="navbar-item">
-            <div class="navbar-info">who are we?</div>
-            <a href="" class="navbar-link">about</a>
-          </li>
-          <li class="navbar-item">
-            <div class="navbar-info">my portfolio</div>
-            <a href="" class="navbar-link">projects</a>
-          </li>
-          <li class="navbar-item">
-            <div class="navbar-info">latest news</div>
-            <a href="" class="navbar-link">blog</a>
-          </li>
-          <li class="navbar-item">
-            <div class="navbar-info">get in touch</div>
-            <a href="" class="navbar-link">contact</a>
-          </li>
-        </ul>
-      </nav>
+    <header class="header">
+      <div class="container_header">
+        <div class="logo">logo</div>
+        <nav>
+          <ul class="navbar-list">
+            <li class="navbar-item">
+              <a href="" class="navbar-link">Home</a>
+              <div class="navbar-info">homepage</div>
+            </li>
+            <li class="navbar-item">
+              <a href="" class="navbar-link">about</a>
+              <div class="navbar-info">who are we?</div>
+            </li>
+            <li class="navbar-item">
+              <a href="" class="navbar-link">projects</a>
+              <div class="navbar-info">my portfolio</div>
+            </li>
+            <li class="navbar-item">
+              <a href="" class="navbar-link">blog</a>
+              <div class="navbar-info">latest news</div>
+            </li>
+            <li class="navbar-item">
+              <a href="" class="navbar-link">contact</a>
+              <div class="navbar-info">get in touch</div>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
   </body>
 </html>
