50% ready of about

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>home</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/test.github.io/style.css" />
   </head>
 
   <body>
@@ -24,7 +24,7 @@
             </li>
             <li class="navbar-item">
               <a href="" class="navbar-link">about</a>
-              <div class="navbar-info">who are we?</div>
+              <div class="navbar-info">who are I?</div>
             </li>
             <li class="navbar-item">
               <a href="" class="navbar-link">projects</a>
@@ -42,6 +42,42 @@
         </nav>
       </div>
     </header>
-    <div class="img"></div>
+    <section class="about">
+      <div class="row-about">
+        <h1 class="title-about">this is what i do</h1>
+        <hr class="seperation"></р>
+        <div class="text-about-me">
+          No one lights a lamp in order to hide it behind the door: the purpose
+          of light is to create more light, to open people’s eyes, to reveal the
+          marvels around.
+        </div>
+      </div>
+      <div class="row-about2">
+        <div class="col">
+          <img>
+          <div class="name-col">mechatronics</div>
+          <div>Good things come to those who wait, 
+            but only the things left by those who hustle</div>
+        </div>
+        <div class="col">
+          <img>
+          <div class="name-col">web programming</div>
+          <div>Good things come to those who wait, 
+            but only the things left by those who hustle</div>
+        </div>
+        <div class="col">
+          <img>
+          <div class="name-col"><div>dfgdf</div></div>
+          <div>Good things come to those who wait, 
+            but only the things left by those who hustle</div>
+        </div>
+        <div class="col">
+          <img>
+          <div class="name-col">[eqdf]</div>
+          <div>Good things come to those who wait, 
+            but only the things left by those who hustle</div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
