--- a/index.html
+++ b/index.html
@@ -54,28 +54,38 @@
       </div>
       <div class="row-about2">
         <div class="col">
-          <img>
-          <div class="name-col">mechatronics</div>
-          <div>Good things come to those who wait, 
+          <img class ="icon-col" src="images/wrench.png" alt="wrench">
+          <div class="content-container-col">
+          <h2 class="name-col">CONSULTATION</h2>
+          <div class="text-col">Good things come to those who wait, 
             but only the things left by those who hustle</div>
+          </div>
         </div>
         <div class="col">
-          <img>
-          <div class="name-col">web programming</div>
-          <div>Good things come to those who wait, 
+          <img class ="icon-col" src="images/wrench.png" alt="wrench">
+          <div class="content-container-col">
+          <h2 class="name-col">CONSULTATION</h2>
+          <div class="text-col">Good things come to those who wait, 
             but only the things left by those who hustle</div>
+          </div>
         </div>
         <div class="col">
-          <img>
-          <div class="name-col"><div>dfgdf</div></div>
-          <div>Good things come to those who wait, 
+          <img class ="icon-col" src="images/wrench.png" alt="wrench">
+          <div class="content-container-col">
+          <h2 class="name-col">CONSULTATION</h2>
+          <div class="text-col">Good things come to those who wait, 
             but only the things left by those who hustle</div>
+          </div>
         </div>
         <div class="col">
-          <img>
-          <div class="name-col">[eqdf]</div>
-          <div>Good things come to those who wait, 
+          <div class="container-col">
+          <img class ="icon-col" src="images/wrench.png" alt="wrench">
+          <div class="content-container-col">
+          <h2 class="name-col">CONSULTATION</h2>
+          <div class="text-col">Good things come to those who wait, 
             but only the things left by those who hustle</div>
+          </div>
+        </div>
         </div>
       </div>
     </section>
